test/scc_test/decl/semantic-errors/007.a
007.t:1:32: error: redefinition of 'a'